tests/functions/errors/too_much_arg.c.res
[36mERROR: Too many arguments[0m [4min line 9
[0m    c = add(1, 2, 3);
                  ^
[36mERROR: Function doesn't have any arguments[0m [4min line 10
[0m    c = add2(1);
             ^
[1m[31mCompilation failed with 2 errors
[0m